err/txzookeeper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/txzookeeper'...
Compiling './lib/python3.5/site-packages/txzookeeper/managed.py'...
***   File "./lib/python3.5/site-packages/txzookeeper/managed.py", line 116
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/txzookeeper/node.py'...
***   File "./lib/python3.5/site-packages/txzookeeper/node.py", line 185
    def on_success((acl, stat)):
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/txzookeeper/queue.py'...
***   File "./lib/python3.5/site-packages/txzookeeper/queue.py", line 157
    def on_get_node_success((data, stat)):
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/txzookeeper/retry.py'...
***   File "./lib/python3.5/site-packages/txzookeeper/retry.py", line 146
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/txzookeeper/tests'...
Compiling './lib/python3.5/site-packages/txzookeeper/tests/mocker.py'...
***   File "./lib/python3.5/site-packages/txzookeeper/tests/mocker.py", line 394
    except excClass, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/txzookeeper/tests/test_client.py'...
***   File "./lib/python3.5/site-packages/txzookeeper/tests/test_client.py", line 286
    def verify_contents((data, stat)):
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/txzookeeper/tests/test_security.py'...
***   File "./lib/python3.5/site-packages/txzookeeper/tests/test_security.py", line 271
    def verify_node_stat_and_acl((acl, node_stat)):
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/txzookeeper/tests/utils.py'...
***   File "./lib/python3.5/site-packages/txzookeeper/tests/utils.py", line 37
    except zookeeper.ZooKeeperException, e:
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/txzookeeper-0.9.8.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
